<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorSilver"
    android:id="@+id/main"
    tools:context="com.immo.adseeker.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mainActivity_btn_name0" />
        <Button
            android:id="@+id/browserBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mainActivity_btn_name1" />

        <Button
            android:id="@+id/linksBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mainActivity_btn_name2" />

        <Button
            android:id="@+id/stopBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mainActivity_btn_name5" />

    </LinearLayout>

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    androidout_weight="1">

                        <EditText
                            android:id="@+id/editText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:descendantFocusability="beforeDescendants"
                            android:focusableInTouchMode="true"
                            android:hint="@string/mainActivity_hint0"
                            android:layout_marginTop="10dp"
                            android:inputType="text"
                            android:gravity="center"
                            android:background="@color/colorWhite"/>

                        <TextView
                            android:id="@+id/loadProcessText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginT10dp"


                            android:layout_gravity="center|bottom"
                            android:text="0"/>

                        </FrameLayout>



                        <Button
                            android:id="@+id/searchBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Search" />
                <Button
                    android:id="@+id/parseAllBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Parse all" />


    </LinearLayout>-->
    <fragment
        android:name="com.immo.adseeker.LinksFragment"
        android:id="@+id/fragment_place"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp" />



</LinearLayout>